--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,10 +1,31 @@
-@import "ember-bootstrap/bootstrap";
+@import 'variables';
 
-$red: #f30;
+/*==================================================
+=            Bootstrap 3 Media Queries             =
+==================================================*/
 
-body {
-  h1 {
-    font-size: 2em;
-    color: $red;
+/*==========  Mobile First Method  ==========*/
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 320px) {
+  body {
+    padding-top: 6em;
   }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+  #search.navbar-form input {
+    width: 40%;
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+
 }
