--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,13 @@
+{{nav-bar onSignIn=(action "signIn") onSignOut=(action "signOut") }}
+
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h1>My {{appName}}</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
+    <div class="col-xs-12">
+      <div class="error-message">
+        {{#if errorMessage}}
+          <p>{{errorMessage}}</p>
+        {{/if}}
+      </div>
       {{outlet}}
     </div>
   </div>
