--- a/app/templates/components/nav-bar.hbs
+++ b/app/templates/components/nav-bar.hbs
@@ -13,7 +13,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar">
         <li>
-          <a href="#" class="nav-item nav-link">Dashboard</a>
+          <a href="/todos" class="nav-item nav-link">Todos</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
