--- a/app/templates/components/todo-list.hbs
+++ b/app/templates/components/todo-list.hbs
@@ -1,5 +1,5 @@
 <ul>
   {{#each todos as |todo|}}
-    {{todo-item todo=todo update=(route-action 'update')}}
+    {{todo-item todo=todo edit=(route-action 'edit') delete=(route-action 'delete')}}
   {{/each}}
 </ul>
