added adding functionality and removed error message

--- a/app/templates/components/todo-list.hbs
+++ b/app/templates/components/todo-list.hbs
@@ -1,4 +1,6 @@
-<ul>
+{{input class="todo-input" value=(readonly text) action="onEnter"}}
+
+<ul class="todo-list">
   {{#each todos as |todo|}}
     {{todo-item todo=todo edit=(route-action 'edit') delete=(route-action 'delete')}}
   {{/each}}
