--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,31 +1,14 @@
 @import 'variables';
 
-/*==================================================
-=            Bootstrap 3 Media Queries             =
-==================================================*/
-
-/*==========  Mobile First Method  ==========*/
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 320px) {
-  body {
-    padding-top: 6em;
-  }
+body {
+  padding-top: 70px;
 }
 
-/* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
-  #search.navbar-form input {
-    width: 40%;
-  }
+ul.todo-list {
+  padding: 0;
+  list-style: none;
 }
 
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-
-}
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-
+input.todo-input {
+  margin-bottom: 1rem;
 }
